command/kubesolo/podinfo-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-demo
  namespace: default
  labels:
    app: podinfo-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: podinfo-demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: podinfo-demo
    spec:
      containers:
      - name: podinfo
        image: ghcr.io/stefanprodan/podinfo:6.7.1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-demo
  namespace: default
  labels:
    app: podinfo-demo
spec:
  type: NodePort
  selector:
    app: podinfo-demo
  ports:
  - name: port-9898
    port: 9898
    targetPort: 9898
    nodePort: 32266
    protocol: TCP
